<resources>
    <string name="app_name">mycapstone</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_history">History</string>
    <string name="title_akun">Akun</string>

    //aset string halaman login dan register
    <string name="welcome">Selamat Datang</string>
    <string name="pleaseLogin">Mohon masukkan email dan
kata sandi anda</string>
    <string name="register">Buat Akun Baru</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="invalid_email">Email Salah</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_name">Masukkan Nama</string>
    <string name="login">Sudah punya akun</string>
    <string name="input_pass">Mohon Isi Password</string>
    <string name="pass_length">Minimal 8 Karakter</string>
    <string name="account_created">Akun Berhasil Dibuat</string>
    <string name="email_exist">Email Telah Digunakan</string>
    <string name="timeout">Waktu Habis!</string>
    <string name="error_message">Email Telah Digunakan</string>
    <string name="error_desc">Masukkan Data</string>
    <string name="pass_salah">Password Tidak Cocok</string>
    <string name="success_login">Berhasil Login</string>
    <string name="unauthorized">Email Atau Password Anda Salah</string>
    <string name="see_password">Tampilkan Password</string>
    <string name="input_benar">Mohon Masukkan Data Dengan Benar</string>
    <string name="ok">OK</string>
    <string name="logout">Keluar</string>

    //aset string halaman home
    <string name="greetings">Hi Username</string>
    <string name="empty">masih kosong</string>
    <string name="cek">Cek Penyakit</string>
    <string name="hasil">Hasil</string>
    <string name="deteksi">Deteksi penyakit ayam melalui gambar feses</string>
    <string name="kategori">Kategori penyakit :</string>
    <string name="jenis">Coccidiosis,New Castle Disease Salmonella</string>
    <string name="artikel">Artikel</string>
    <string name="artikel1">Ketahui lebih lanjut mengenai Coccidiosis</string>
    <string name="artikel2">Ketahui lebih lanjut New Castle Disease</string>
    <string name="artikel3">Ketahui lebih lanjut mengenai Salmonella</string>

    //aset string halaman upload
    <string name="deny">Tidak mendapatkan izin</string>
    <string name="takePhoto">Ambil Gambar</string>
    <string name="takeImage">Import Gambar</string>
    <string name="nama">Nama</string>
    <string name="tanggal">Tanggal</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="inputName">Masukkan nama</string>
    <string name="inputTanggal">Masukkan tanggal</string>
    <string name="inputdesc">Masukkan deskripsi</string>
    <string name="save">Simpan</string>
    <string name="uploadscs">Berhasil</string>


    <string name="acc_created">Akun berhasil dibuat</string>
    <string name="OK">OK</string>
    <string name="Email_invalid">Email sudah digunakan</string>
    <string name="responEror">Gagal Memuat</string>

</resources>