<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:alpha="0"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


        <com.example.mycapstone.Custom.CustomUsername
            android:id="@+id/inputName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:alpha="0"
            android:background="@drawable/textbar"
            android:drawablePadding="5dp"
            android:hint="@string/nama"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:elevation="4dp"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <com.example.mycapstone.Custom.CustomMail
            android:id="@+id/inputEmail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:background="@drawable/textbar"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12dp"/>

        <com.example.mycapstone.Custom.CustomPassword
            android:id="@+id/inputPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:background="@drawable/textbar"
            android:drawablePadding="5dp"
            android:hint="@string/pass"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12dp"
            />

        <com.example.mycapstone.Custom.CustomPassword
            android:id="@+id/confirmPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:background="@drawable/textbar"
            android:drawablePadding="5dp"
            android:hint="@string/pass"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12dp"
            />

        <CheckBox
            android:id="@+id/seePassword"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="left"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="5dp"
            android:alpha="0"
            android:text="@string/see_password"
            android:textSize="12dp" />

        <com.example.mycapstone.Custom.CustomButton
            android:id="@+id/registerButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:background="@drawable/register_button"
            android:enabled="false"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:alpha="0"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />
</FrameLayout>