<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Akun.AkunFragment">

    <ImageView
        android:layout_width="99dp"
        android:layout_height="111dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/greetings"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        />

    <com.example.mycapstone.Custom.CustomButton
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_corner_radius"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:textStyle="bold" />
</LinearLayout>